# PYPI-terminal-app

./: README.md  pyproject.toml
