[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task_tracker_itsvicky"
version = "0.0.3"
authors = [
  { name="Vicky", email="vicky.y.nie@gmail.com" },
]
description = "Keep track of your tasks"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"